syntax = "proto3";

service Account {
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Read(ReadRequest) returns (ReadResponse) {}
	rpc Search(SearchRequest) returns (SearchResponse) {}
	
	// rpc Update(UpdateRequest) returns (UpdateResponse) {}
	// rpc Delete(DeleteRequest) returns (DeleteResponse) {}
	// rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse) {}
	// rpc Login(LoginRequest) returns (LoginResponse) {}
	// rpc Logout(LogoutRequest) returns (LogoutResponse) {}
	// rpc ReadSession(ReadSessionRequest) returns(ReadSessionResponse) {}
}

message User {
	uint64 id = 1;		
	string username = 2;
	string email = 3;
	string created = 4;
	string updated = 5;
}

message CreateRequest {
	User user = 1;
    string password = 2;
}

message CreateResponse {
}

message ReadRequest {
	uint64 id = 1;
}

message ReadResponse {
	User user = 1;
}

message SearchRequest {
	string query = 1; // Email, username, names...
	repeated uint64 id = 2;
	uint32 limit = 3;
	uint32 offset = 4;
}

message SearchResponse {
	repeated User users = 1;
}
